new update in home page

--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
-                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">30 June 2025</span>
                             </div>
                             <h3 class="card-text card-lottery-name">Monday Choice Weekly Lottery<br>(MOC 18th Draw)</h3>
@@ -1287,7 +1287,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
-                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">29 June 2025</span>
                             </div>
                             <h3 class="card-text card-lottery-name">Sunday Choice Weekly Lottery<br>(SUC 18th Draw)</h3>
@@ -1362,7 +1362,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
-                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">28 June 2025</span>
                             </div>
                             <h3 class="card-text card-lottery-name">Saturday Choice Weekly Lottery<br>(SAC 18th Draw)</h3>
@@ -1437,7 +1437,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
-                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">27 June 2025</span>
                             </div>
                             <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery<br>(FRI 18th Draw)</h3>
@@ -1512,7 +1512,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
-                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">26 June 2025</span>
                             </div>
                             <h3 class="card-text card-lottery-name">Thursday Choice Weekly Lottery<br>(THC 18th Draw)</h3>
@@ -1587,7 +1587,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
-                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">25 June 2025</span>
                             </div>
                             <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(WEC 18th Draw)</h3>
