--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
             <div class="flex items-center justify-between mb-6">
                 <h2 class="text-xl font-bold section-title flex items-center">
                     <i class="fas fa-clock text-orange-500 mr-2 text-xl"></i>
-                    Upcoming Lotteries
+                    Upcoming Lottery
                 </h2>
                 <!-- <span
                     class="bg-gradient-to-r from-orange-500 to-red-500 text-white text-sm px-3 py-1 rounded-full font-semibold">3
@@ -746,7 +746,7 @@
 
             </div>
         </section>
-        
+
         <!-- Past Results -->
         <section>
             <div class="flex items-center justify-between mb-6">
