--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
         }
 
         .card-text {
-            color: rgba(255, 255, 255, 0.95);
+            color: rgb(255, 255, 255);
             text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
         }
 
         .card-text-secondary {
-            color: rgba(255, 255, 255, 0.8);
+            color: rgb(255, 255, 255);
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
