new update in home page

--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
 
             .result-winning-number {
                 font-size: 1.6rem;
+                border: 1px solid rgb(128, 123, 123);
+                border-radius: 6px;
+                background-color: #fafffe63;
             }
         }
     </style>
