new update in home page

--- a/index.html
+++ b/index.html
@@ -760,11 +760,11 @@
             <div class="flex items-center justify-between mb-6">
                 <h2 class="text-xl font-bold section-title flex items-center">
                     <i class="fas fa-history text-purple-500 mr-2 text-xl"></i>
-                    Past Results
+                    View All Results
                 </h2>
-                <button
+                <!-- <button
                     class="bg-gradient-to-r from-purple-500 to-pink-500 text-white text-sm px-3 py-1 rounded-full font-semibold hover:shadow-lg transition-all">View
-                    All</button>
+                    All</button> -->
             </div>
 
             <div class="space-y-5">
@@ -1097,7 +1097,7 @@
                                 <div class="result-card-header">1st Prize</div>
                                 <div class="result-card-content">
                                     <div class="result-prize-amount">₹1,00,000/-</div>
-                                    <div style="border:1px solid black" class="result-winning-number">MH 40352</div>
+                                    <div class="result-winning-number">MH 40352</div>
                                 </div>
                             </div>
 
