--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                             <h3 class="card-text card-lottery-name">Monday Choice Weekly Lottery<br>(MOC-18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH40352 - ₹40 Lakh</span>
+                                <span class="card-prize">1st Prize: ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -854,7 +854,7 @@
                             <h3 class="card-text card-lottery-name">Sunday Choice Weekly Lottery<br>(SUC-18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize:  ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -930,7 +930,7 @@
                             </h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize: ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -1002,10 +1002,10 @@
                                 <span class="past-badge rounded-full">RESULT</span>
                                 <span class="card-text-secondary card-date">27 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery<br>(FRI 18th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery<br>(FRC-18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize: ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -1081,7 +1081,7 @@
                             </h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize:  ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -1155,7 +1155,7 @@
                             </h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize:  ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
