--- a/index.html
+++ b/index.html
@@ -451,7 +451,10 @@
         .result-card-content {
             background: white;
             padding: 16px 20px;
-            text-align: center;
+            /* text-align: center; */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .result-prize-amount {
@@ -460,6 +463,7 @@
             color: #059669;
             margin-bottom: 8px;
             line-height: 1.2;
+            
         }
 
         .result-winning-number {
@@ -473,6 +477,7 @@
             border: 3px solid rgb(229, 229, 229);
             border-radius: 6px;
             background-color: #d9daeb63;
+            padding: 6px 12px;
             /* margin-bottom: 12px; */
         }
 
@@ -854,7 +859,7 @@
                             <h3 class="card-text card-lottery-name">Sunday Choice Weekly Lottery<br>(SUC-18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">1st Prize:  ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize: ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -1081,7 +1086,7 @@
                             </h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">1st Prize:  ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize: ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -1155,7 +1160,7 @@
                             </h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">1st Prize:  ₹15 Lakh</span>
+                                <span class="card-prize">1st Prize: ₹15 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
