new update in home page

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                             </div>
 
                             <!-- Countdown Timer -->
-                            <div class="countdown-container">
+                            <!-- <div class="countdown-container">
                                 <div class="flex items-center justify-between">
                                     <span class="countdown-label">Result in:</span>
                                     <div class="flex space-x-2 items-center">
@@ -693,7 +693,7 @@
                                         <div class="countdown-badge" id="result-countdown1-seconds">45</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="text-right ml-4">
                             <i id="arrow1"
